src/grammar.ebnf

Program     = { Statement };

(* Statements *)
Statement   = { NewLine },
              LetStmt | ExprStmt | EmptyStmt;

LetStmt     = "let", Identifier, "=", Expression, Terminator;
ExprStmt    = Expression, Terminator;
EmptyStmt   = ";";

Terminator  = ";" | Newline;

(* Expressions *)
Expression = PrattExpr;

(* Expression forms *)
nud = Number
    | Identifier
    | "true"
    | "false"
    | "(", Expression, ")"
    | "{", { Statement }, "}"
    ;

led = "==", Expression
    | "!=", Expression
    | "<", Expression
    | "<=", Expression
    | ">", Expression
    | ">=", Expression
    | "+", Expression
    | "-", Expression
    | "*", Expression
    | "/", Expression
    ;
